--- a/templates/events_register.html
+++ b/templates/events_register.html
@@ -19,7 +19,10 @@
 </head>
 <body>
 <div class="container mt-5">
-    <h2>開催日を登録</h2>
+    <div class="d-flex justify-content-between align-items-center mb-3">
+        <h2>開催日を登録</h2>
+        <a href="/events/delete">開催日の削除</a>
+    </div>
     <form method="POST">
         <div class="form-group d-flex align-items-center">
             <select class="form-control mx-2 year-select" name="selected_year">
