開催日の登録時にEnterキーで送信されないように変更

--- a/templates/events_register.html
+++ b/templates/events_register.html
@@ -107,6 +107,16 @@
     </form>
 </div>
 <script>
+    document.addEventListener("DOMContentLoaded", function() {
+        document.querySelectorAll('input').forEach(function(input) {
+            input.addEventListener('keydown', function(event) {
+                if (event.key === 'Enter') {
+                    event.preventDefault();
+                }
+            });
+        });
+    });
+
     function submitForm() {
         document.querySelector('form').submit();  // フォームを送信
     }
