--- a/templates/events_register.html
+++ b/templates/events_register.html
@@ -21,7 +21,7 @@
 <div class="container mt-5">
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h2>開催日を登録</h2>
-        <a href="/events/delete">開催日の削除</a>
+        <a href="/events/delete">開催日の管理</a>
     </div>
     <form method="POST">
         <div class="form-group d-flex align-items-center">
@@ -43,7 +43,7 @@
             <input type="text" class="form-control" id="location" name="location" value="{{ place }}" required>
         </div>
         <div class="form-group">
-            <label for="description">説明</label>
+            <label for="description">説明(自由記述)</label>
             <input type="text" class="form-control" id="description" name="description" value="{{ description }}" required>
         </div>
         <div class="form-group">
